# polars_rust

./: Cargo.toml
data/: load_csv_with_schema.csv  part.csv  purchase.csv  single_integer.csv
inner_join_and_filter/: Cargo.toml
inner_join_and_filter/src/: main.rs
load_csv/: Cargo.toml
load_csv/src/: main.rs
load_csv_lazy/: Cargo.toml
load_csv_lazy/src/: main.rs
load_csv_with_schema/: Cargo.toml
load_csv_with_schema/src/: main.rs
schemata/: Cargo.toml
schemata/src/: lib.rs
