[package]
name = "inner_join_and_filter"
version = "0.1.0"
edition = "2021"

[dependencies]
schemata = { path = "../schemata" }

[dependencies.anyhow]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.chrono-tz]
workspace = true

[dependencies.polars]
workspace = true
features = [
    "csv",
    "lazy",
    "temporal",
    "timezones",
    "dtype-datetime",
]
